fix(docked-actions): ensure docked actions don't overlap

--- a/src/scss/utilities/_docked-actions.scss
+++ b/src/scss/utilities/_docked-actions.scss
@@ -2,4 +2,9 @@
 .docked-actions {
   position: fixed;
   inset: auto $global-gutter $global-gutter auto;
+
+  .fab[data-docked] {
+    bottom: auto;
+    position: relative;
+  }
 }
